--- a/styles/temporaryCSSModulesReplacement.scss
+++ b/styles/temporaryCSSModulesReplacement.scss
@@ -187,16 +187,16 @@
 	}
 	// .product-card__image
 	&__image {
+		position: relative;
 		width: 100%;
 		height: 100%;
 		border-radius: 50%;
 		overflow: hidden;
 		transition: transform 0.3s ease-in-out;
 		img {
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
+			object-fit: contain;
 			object-position: center;
+			border-radius: 50%;
 		}
 	}
 	// .product-card__labels
